--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,5 @@
 body {
-  margin: 0;
-  margin-top: 10px;
+  margin: 10px 10px 0 10px;
   font-family: arial, sans-serif;
 }
 
@@ -12,6 +11,7 @@ a {
 
 h1 {
   font-style: italic;
+  color: blue;
   margin-bottom: 10px;
 }
 
