--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ h1 {
   font-style: italic;
   color: #222;
   margin-bottom: 10px;
-  float: right;
+  border-bottom: 1px solid black;
 }
 
 .navigation {
